--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Diphylleia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 /*General*/
 
 
@@ -92,81 +93,6 @@ body {
     z-index: 1;
 }
 
-.navbar {
-    background-color: white;
-    height: 50px;
-    /* border-bottom: 1px solid #ddd; */
-    /* padding: 10px 20px; */
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    transition: opacity 0.3s ease;
-}
-
-.hero-navbar {
-    /* Add your desired styles for the navbar on the hero-section page */
-    background-color: transparent;
-    color: white;
-  }
-  
-
-.navbar.hidden {
-    opacity: 0;
-    visibility: hidden;
-}
-
-.navbar .navbar-brand {
-    font-family: 'Dancing Script';
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-
-.navbar-toggler {
-    display: block;
-    cursor: pointer;
-    /* padding: 10px; */
-    background-color: transparent;
-    border: none;
-    z-index: 1;
-}
-
-.navbar-toggler span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #333333;
-    margin-bottom: 5px;
-    transition: transform 0.3s ease;
-}
-
-.navbar-toggler.open span:nth-child(1) {
-    transform: translateY(6px) rotate(45deg);
-}
-
-.navbar-toggler.open span:nth-child(2) {
-    opacity: 0;
-}
-
-.navbar-toggler.open span:nth-child(3) {
-    transform: translateY(-6px) rotate(-45deg);
-}
-
-.navbar .navbar-nav {
-    margin-left: auto;
-}
-
-.navbar .navbar-nav .nav-link {
-    font-family: 'Noto Sans';
-    color: black;
-    font-size: 1rem;
-    margin-left: 20px;
-}
-
-.navbar .navbar-nav .nav-link:hover {
-    color: #555;
-}
 
 .scroll-to-top {
     position: fixed;
@@ -206,11 +132,11 @@ section.what_is_mhealth{
 
 section.what_is_mhealth div.head{
     text-align: center;
-    font-family: 'Roboto';
+    font-family: 'Poppins';
 }
 
 section.what_is_mhealth div.head h2{
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
@@ -232,6 +158,7 @@ section.what_is_mhealth div.main-content{
 }
 
 section.what_is_mhealth div.subs{
+    font-family: 'Lato';
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -926,7 +853,7 @@ section.resources{
     padding: 40px 0 10px;
     /* background-color: #ffffff; */
     background-color: rgb(34, 34, 34);
-    margin-bottom: 20px;
+    margin-bottom: 70px;
   }
 
   .res-contain{
