--- a/styles/header.css
+++ b/styles/header.css
@@ -42,7 +42,7 @@
 
 .navbar .navbar-brand {
     font-family: 'Dancing Script';
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 700;
 }
 
@@ -78,6 +78,7 @@
 
 .navbar .navbar-nav {
     margin-left: auto;
+    /* background-color: white; */
 }
 
 .navbar .navbar-nav .nav-link {
@@ -89,4 +90,8 @@
 
 .navbar .navbar-nav .nav-link:hover {
     color: #555;
+}
+
+.navbar-collapse.open{
+    background: linear-gradient(to right, relative,transparent);
 }
