--- a/more_conditions/style2.css
+++ b/more_conditions/style2.css
@@ -16,12 +16,12 @@ section.hero {
 }
 
     .container {
-        height: auto;
+        height: 100%;
         width: 90%;
         /* border-radius: 20%; */
-        background-color:red;
-        margin: 10px;
-        box-shadow: 0 0 5px black;
+        /* background-color:white; */
+        /* margin-bottom: 10px */
+        margin: 10px auto;
     }
 
 
@@ -49,7 +49,7 @@ section.hero {
     }
 
     .photo3 {
-        background-image: url('./pic/eating disorders.jpg');
+        background-image: url('./pic/eating\ disorders.jpg');
     }
 
     .photo4 {
@@ -70,12 +70,14 @@ section.hero {
     }
 
     .content {
-        height: 40vh;
+        /* height: 40vh; */
         flex-direction: column;
         padding: 25px;
-        overflow: scroll;
+        /* overflow: scroll; */
     }
 
     .content p {
-        text-align: center;
+        text-align: left;
+        margin-bottom: 10px;
+        margin-top: 10px;
     }
