--- a/more_conditions/style2.css
+++ b/more_conditions/style2.css
@@ -7,6 +7,7 @@
 section.hero {
     /* height: 100vh; */
     /* height: 100vh; */
+    margin-top: 50px;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -81,3 +82,28 @@ section.hero {
         margin-bottom: 10px;
         margin-top: 10px;
     }
+
+    .scroll-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #555;
+        color: #fff;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+    }
+    
+    .scroll-to-top.show {
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    
