--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body {
     text-align: center;
     color: #fff;
     background-color: black;
-    background-image: url("../../assets/closeFace.jpg");
+    background-image: url("../assets/closeFace.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
